# adaptive-retrieval

./: .gitattributes  .gitignore  README.md  ko-strategyqa-train-final.sh  main.py  pyproject.toml  reranker_strategy_run.sh  run_final_test.sh  run_lgbm_test.sh  run_lgbm_train.sh  run_linear_mse_test.sh  run_linear_mse_train.sh
autorag_config/: basic.yaml  fixed_hybrid.yaml
data/allganize/: qa_embeddings.parquet
data/ko-strategyqa/: ko-strategy-qa_dev.json  ko-strategy-qa_train.json  qa_dev.parquet  qa_dev_embeddings.parquet  qa_train.parquet
data/mldr/: corpus.parquet  qa_dev.parquet  qa_test.parquet  qa_train.parquet
data/mr-tydi/: corpus.parquet  qa_dev.parquet  qa_test.parquet  qa_train.parquet
projects/allganize/: trial.json
projects/ko-strategyqa-dev/: trial.json
projects/ko-strategyqa-train/: trial.json
result/allganize/: allganize_dat_result_top_k_20.parquet  allganize_distmix_drop_rr_top_k_20.parquet  allganize_distmix_sigma_1.0_top_k_20.parquet  allganize_distmix_sigma_1.5_top_k_20.parquet  allganize_distmix_sigma_2.0_top_k_20.parquet  allganize_distmix_weight_top_k_20.parquet  allganize_multi_hop_dat_result_top_k_20_mhk_5.parquet  allganize_result_top_k_20.parquet
result/ko-strategyqa/: ko-strategyqa-dev_dat_result_top_k_50.parquet  ko-strategyqa-dev_distmix_drop_rr_top_k_50.parquet  ko-strategyqa-dev_distmix_sigma_1.0_top_k_50.parquet  ko-strategyqa-dev_distmix_sigma_1.5_top_k_50.parquet  ko-strategyqa-dev_distmix_sigma_2.0_top_k_50.parquet  ko-strategyqa-dev_distmix_weight_top_k_50.parquet  ko-strategyqa-dev_linear_mse_result.parquet  ko-strategyqa-dev_multi_hop_dat_result_top_k_50_mhk_3.parquet  ko-strategyqa-dev_multi_hop_dat_result_top_k_50_mhk_5.parquet  ko-strategyqa-dev_result_top_k_50.parquet  ko-strategyqa-dev_trained_model_result_wo_dist.parquet  ko-strategyqa-dev_trained_model_result_wo_dist_classification.parquet  ko-strategyqa-train_result_top_k_50.parquet  lgbm_ko-strategyqa-dev_classification_result.parquet  lgbm_ko-strategyqa-dev_regression_result.parquet
result/mldr/: mldr-dev_dat_result_top_k_50.parquet  mldr-dev_distmix_drop_rr_top_k_50.parquet  mldr-dev_distmix_sigma_1.0_top_k_50.parquet  mldr-dev_distmix_sigma_1.5_top_k_50.parquet  mldr-dev_distmix_sigma_2.0_top_k_50.parquet  mldr-dev_distmix_weight_top_k_50.parquet  mldr-dev_multi_hop_dat_result_top_k_50_mhk_3.parquet  mldr-dev_multi_hop_dat_result_top_k_50_mhk_5.parquet  mldr-dev_upper_bound_top_k_50.parquet  mldr-train_upper_bound_top_k_50.parquet  mldr_dev_lgbm_classification.parquet  mldr_dev_lgbm_regression.parquet  mldr_dev_linear_mse_result.parquet  (+2 more)
(+77 files in other folders)
